# rslife

./: .gitignore  CHANGELOG.md  CODSPEED_SETUP.md  Cargo.toml  DEPLOYMENT.md  LICENSE  LICENSE-APACHE  README.md  debug_table.rs
.github/: FUNDING.yml
.github/workflows/: codspeed.yml  coverage.yml  rust-1.89.0.yml  rust-1.90.0.yml  rust-1.95.0.yml  rust-nightly.yml  rust-stable.yml  rust.yml
benches/: annuities.rs  commutations.rs  mortality_functions.rs
data/: 00series.xls  80series.xls  92series.xls  am92.ods  am92.xlsx  am92_select.ods  am92_select.xlsx  elt15.ods  elt15.xlsx  life_table.csv  ltam_standard_ultimate.ods  ltam_standard_ultimate.xlsx  pfa92.ods  pfa92c20.xlsx  t1704.xml
diagrams/: .$function_convention.drawio.bkp  function_convention.drawio
examples/: am92_select.ods  basic_usage.rs  cm1_apr_2025.rs  cm1_april_2025.rs  cm1_sep_2025.rs  custom_data_demo.rs  prelude_demo.rs  soa_data_demo.rs  test_builder.rs  xml_custom_xlsx_demo.rs  xml_demo.rs  xml_soa_mort_demo.rs
src/: actuarial.rs  annuities.rs  annuities_certain.rs  benefits.rs  fractional.rs  helpers.rs  int_rate_convert.rs  lib.rs  macros.rs  mt_config.rs  mt_data.rs  param_config.rs  params.rs  prelude.rs  selection.rs  single.rs  single_life.rs  survivals.rs  whole.rs  xml.rs
src/actuarial/: fractionals.rs  mort_tbl_config.rs  wholes.rs
src/actuarial/fractionals/: cfm.rs  hbp.rs  helpers.rs  udd.rs
src/fractional/: helpers.rs  survivals.rs
src/mt_config/: aga_xls.rs  ausii_xls.rs  builtin.rs  ifoa_xls.rs  mod.rs  mt_data.rs  soa_xml.rs  spreadsheet_helpers.rs
src/param/: get_value.rs  mod.rs  single_life.rs  survival.rs  validation.rs
src/selection/: annuities.rs  helpers.rs  survivals.rs
src/selection/annuities/: deferred_due.rs  deferred_immediate.rs  due.rs  immediate.rs
src/selection/benefits/: deferred_due.rs  deferred_immediate.rs  due.rs  immediate.rs
src/single/: annuities.rs  benefits.rs  survivals.rs
src/single_life/: annuities.rs  benefits.rs  commutations.rs  helpers.rs  survivals.rs
src/table_xml/: t912.xml
src/whole/: annuities.rs  benefits.rs  benefits_2.rs  helpers.rs  survivals.rs
src/whole/annuities/: deferred_due.rs  deferred_immediate.rs  due.rs  immediate.rs
src/whole/benefits/: deferred_due.rs  deferred_immediate.rs  due.rs  immediate.rs
table_xml/: t1704.xml
tests/: prelude_integration.rs
