[package]
name = "rslife"
version = "0.2.12"
edition = "2024"
rust-version = "1.90.0"
description = "A comprehensive Rust library for actuarial mortality table calculations and life insurance mathematics"
license = "MIT"
repository = "https://github.com/hnlearndev/rslife"
homepage = "https://github.com/hnlearndev/rslife"
documentation = "https://docs.rs/rslife"
keywords = ["actuarial", "mortality", "insurance", "finance", "statistics"]
categories = ["mathematics", "science", "finance"]
authors = ["RSLife Contributors"]
readme = "README.md"

[dependencies]
calamine = "0.35.0"
polars = { version = "0.53.0", features = ["lazy"] }
reqwest = { version = "0.13.3", features = ["blocking"] }
roxmltree = "0.21.1"
spreadsheet-ods = "1.0.1"
garde = { version = "0.22", features = ["derive"] }
bon = "3.7.2"
rustc-hash = "2.1.0"
once_cell = "1.20.0"

[dev-dependencies]
approx = "0.5"